--- a/CapstoneDesign_23_2/index/index.css
+++ b/CapstoneDesign_23_2/index/index.css
@@ -1,4 +1,4 @@
-@meida (max-width: 900px)
+/* @meida (max-width: 900px)
 .flex-container{
     display: inline-flex;
 }
@@ -14,4 +14,4 @@
 @meida (min-width: 768px)
 .flex-container{
     display: inline-flex;
-}
+} */
