--- a/CapstoneDesign_23_2/index/index.css
+++ b/CapstoneDesign_23_2/index/index.css
@@ -14,4 +14,41 @@
 @meida (min-width: 768px)
 .flex-container{
     display: inline-flex;
-} */
+} 
+
+*/
+.dailytimetable{
+    width: 30%;
+    height: 100%;
+    border: 1px solid black;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+    margin-bottom: 20px;
+}
+.checklist {
+    width: 30%;
+    height: auto;
+    border: 1px solid black;
+    margin: 0 auto;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+    margin-bottom: 20px;
+    overflow: hidden;
+}
+
+.checklistinner {
+    display: flex;
+    align-items: center;
+    margin: 10px;
+}
