--- a/CapstoneDesign_23_2/index/index.css
+++ b/CapstoneDesign_23_2/index/index.css
@@ -45,10 +45,24 @@
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
     margin-bottom: 20px;
     overflow: hidden;
-}
-
-.checklistinner {
+  }
+  
+  .flex-item {
+    background-color: greenyellow;
+    text-align: center;
+  }
+  
+  .cklist {
     display: flex;
     align-items: center;
     margin: 10px;
-}
+  }
+  
+  input[type="checkbox"]:checked + input[type="text"] {
+    text-decoration: line-through;
+  }
+  
+  .delete-btn {
+    margin-left: 10px;
+    cursor: pointer;
+  }
