--- a/CapstoneDesign_23_2/index/index.css
+++ b/CapstoneDesign_23_2/index/index.css
@@ -1,37 +1,40 @@
-/* @meida (max-width: 900px)
+/* 화면크기 1920-1080, 1536-864, 1280-730, */
+@meida (max-width: 1554px)
 .flex-container{
     display: inline-flex;
 }
 
-@meida (min-width: 768px)
+@meida (max-width: 1024px)
 .flex-container{
     display: inline-flex;
 }
-@meida (min-width: 768px)
+@meida (max-width: 880px)
 .flex-container{
     display: inline-flex;
 }
-@meida (min-width: 768px)
+@meida (max-width: 390px)
 .flex-container{
     display: inline-flex;
-} 
-
-*/
+}
 .dailytimetable{
-    width: 30%;
-    height: 100%;
-    border: 1px solid black;
+    position:fixed;
+    top:8%;
+    left:10%;
+    width: 40%;
+    height: 63%;
     margin: 0 auto;
     text-align: center;
     font-size: 20px;
     font-weight: bold;
-    color: black;
-    background-color: white;
-    border-radius: 20px;
-    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+    margin-right:20px;
     margin-bottom: 20px;
+    
+
 }
 .checklist {
+   position:fixed;
+    top:8%;
+    left:55%;
     width: 30%;
     height: auto;
     border: 1px solid black;
@@ -43,12 +46,13 @@
     background-color: white;
     border-radius: 20px;
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);
+    margin-left: 20px;
     margin-bottom: 20px;
     overflow: hidden;
+    
   }
   
   .flex-item {
-    background-color: greenyellow;
     text-align: center;
   }
   
@@ -65,4 +69,8 @@
   .delete-btn {
     margin-left: 10px;
     cursor: pointer;
+  }
+
+  .memo{
+    position:bottom;
   }
