--- a/node/views/settingpage/settingpage.html
+++ b/node/views/settingpage/settingpage.html
@@ -110,7 +110,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="../settingpage/settingpage.html">Setting</a></li>
                             <li><a class="dropdown-item" href="../index/profile.html">Profile</a></li>
-                            <li><a class="dropdown-item" href="../index/loginpage.html">Log in</a></li>
+                            <li><a class="dropdown-item" href="../settingpage/loginpage.html">Log in</a></li>
                         </ul>
                     </li>
                 </ul>
