--- a/node/views/index/index.html
+++ b/node/views/index/index.html
@@ -226,8 +226,8 @@
                       aria-expanded="false">Menu</a>
                   <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="../settingpage/settingpage.html">Setting</a></li>
-                      <li><a class="dropdown-item" href="../index/profile.html">Profile</a></li>
-                      <li><a class="dropdown-item" href="../index/loginpage.html">Log in</a></li>
+                      <li><a class="dropdown-item" href="../settingpage/profile.html">Profile</a></li>
+                      <li><a class="dropdown-item" href="../settingpage/loginpage.html">Log in</a></li>
                   </ul>
               </li>
           </ul>
