--- a/node/views/monthpage/index.html
+++ b/node/views/monthpage/index.html
@@ -71,7 +71,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="../settingpage/settingpage.html">Setting</a></li>
                             <li><a class="dropdown-item" href="../index/profile.html">Profile</a></li>
-                            <li><a class="dropdown-item" href="../settingpage/loginpage.html">Log in</a></li>
+                            <li><a class="dropdown-item" href="../index/loginpage.html">Log in</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -166,17 +166,19 @@
                     }
                 },
                 eventClick: function (info) {
-                // 수정 창을 띄우기 전에 바로 수정할 수 있도록 변경
                 var newTitle = prompt('일정 제목을 수정하세요:', info.event.title);
                 if (newTitle !== null) {
-                    info.event.setProp('title', newTitle);
+                    // 수정 입력창이 공백이면 삭제
+                    info.event.setProp('title', newTitle.trim());
+                    if (newTitle.trim() === '') {
+                        info.event.remove();
+                    }
                 }
             }
         });
-
-            calendar.render();
+         calendar.render();
         });
-    </script>
+        </script>
 
     <!-- Bootstrap and Main Scripts -->
     <script src="js/jquery-3.3.1.min.js"></script>
