modify button onclick to move page

--- a/node/views/settingpage/loginpage.html
+++ b/node/views/settingpage/loginpage.html
@@ -199,7 +199,7 @@
           <label for="signupPhone" class="form-label">전화번호</label>
           <input type="tel" class="form-control" id="signupPhone" required>
         </div>
-        <button type="button" class="btn btn-success w-100 py-2" onclick="submitSignupForm()">Sign up</button>
+        <button onclick="location.href='../settingpage/loginpage.html'" type="button" class="btn btn-success w-100 py-2" onclick="submitSignupForm()">Sign up</button>
         <button type="button" class="btn btn-secondary w-100 py-2" onclick="toggleSignupForm()">Cancel</button>
       </div>
     </div>
