--- a/node/views/settingpage/profilepage.html
+++ b/node/views/settingpage/profilepage.html
@@ -111,7 +111,7 @@
         </div>
 
         <!-- 저장 버튼 -->
-        <button id="saveProfileButton" class="btn btn-primary">저장</button>
+        <button onclick="location.href='../index/index.html'" id="saveProfileButton" class="btn btn-primary">저장</button>
     </div>
 
     <script src="profile.js"></script>
