--- a/node/views/settingpage/profilepage.html
+++ b/node/views/settingpage/profilepage.html
@@ -35,14 +35,47 @@
         .btn-primary:focus {
             box-shadow: 0 0 0 0.2rem rgba(113, 44, 249, 0.25);
         }
+
+        .navbar {
+            background-color: #000 !important;
+        }
+        
+        .nav-link {
+            color: #fff !important;
+        }
     </style>
 </head>
 
 <body>
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="프로필 페이지 네비게이션 바">
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Twelfth navbar example">
         <div class="container-fluid">
-            <!-- 네비게이션 바 내용은 이전과 동일하게 유지 -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample10"
+                aria-controls="navbarsExample10" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample10">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="../index/index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../weekpage/weekpage.html">Week</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../monthpage/index.html">Month</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Menu</a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="../settingpage/settingpage.html">Setting</a></li>
+                            <li><a class="dropdown-item" href="../settingpage/profilepage.html">Profile</a></li>
+                            <li><a class="dropdown-item" href="../settingpage/loginpage.html">Log in</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
