--- a/node/views/settingpage/loginpage.html
+++ b/node/views/settingpage/loginpage.html
@@ -110,19 +110,14 @@
                             <input type="text" class="form-control" id="signupName" required>
                         </div>
                         <div class="mb-3">
-                            <label for="signupAge" class="form-label">나이</label>
-                            <input type="number" class="form-control" id="signupAge" required>
-                        </div>
-                        <div class="mb-3">
                             <label for="signupEmail" class="form-label">이메일</label>
                             <input type="email" class="form-control" id="signupEmail" required>
                         </div>
                         <div class="mb-3">
-                            <label for="signupPhone" class="form-label">전화번호</label>
-                            <input type="tel" class="form-control" id="signupPhone" required>
+                            <label for="signupPassword" class="form-label">비밀번호</label>
+                            <input type="password" class="form-control" id="signupPassword" required>
                         </div>
-                        <button onclick="location.href='../settingpage/loginpage.html'" type="button" class="btn btn-success w-100 py-2"
-                            onclick="submitSignupForm()">Sign up</button>
+                        <button type="button" class="btn btn-success w-100 py-2" onclick="submitSignupForm()">Sign up</button>
                         <button type="button" class="btn btn-secondary w-100 py-2" onclick="toggleSignupForm()">Cancel</button>
                     </div>
                 </div>
@@ -156,9 +151,10 @@
 
     </div>
 
-    <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HqC3bA+LQH8i+5s6ZLfE63cjsvHA1LVveaEWgA6p4c9fd5MI2fBP6Z3FeDAHA5Dl"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
