--- a/node/views/settingpage/profilepage.html
+++ b/node/views/settingpage/profilepage.html
@@ -58,20 +58,20 @@
             <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample10">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../index/index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="dailypage">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../weekpage/weekpage.html">Week</a>
+                        <a class="nav-link" href="/weekpage">Week</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../monthpage/index.html">Month</a>
+                        <a class="nav-link" href="/monthpage">Month</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Menu</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="../settingpage/settingpage.html">Setting</a></li>
-                            <li><a class="dropdown-item" href="../settingpage/profilepage.html">Profile</a></li>
-                            <li><a class="dropdown-item" href="../settingpage/loginpage.html">Log in</a></li>
+                            <li><a class="dropdown-item" href="/settingpage">Setting</a></li>
+                            <li><a class="dropdown-item" href="/profilepage">Profile</a></li>
+                            <li><a class="dropdown-item" href="/loginpage">Log in</a></li>
                         </ul>
                     </li>
                 </ul>
