--- a/node/views/monthpage/index.html
+++ b/node/views/monthpage/index.html
@@ -11,11 +11,11 @@
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="fonts/icomoon/style.css">
-    <link href='fullcalendar/packages/core/main.css' rel='stylesheet' />
-    <link href='fullcalendar/packages/daygrid/main.css' rel='stylesheet' />
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./fonts/icomoon/style.css">
+    <link href='./fullcalendar/packages/core/main.css' rel='stylesheet' />
+    <link href='./fullcalendar/packages/daygrid/main.css' rel='stylesheet' />
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>EduLog</title>
     <style>
         /* Additional Styles for Month Page */
@@ -85,9 +85,9 @@
     </div>
 
     <!-- FullCalendar Scripts -->
-    <script src='fullcalendar/packages/core/main.js'></script>
-    <script src='fullcalendar/packages/interaction/main.js'></script>
-    <script src='fullcalendar/packages/daygrid/main.js'></script>
+    <script src='./fullcalendar/packages/core/main.js'></script>
+    <script src='./fullcalendar/packages/interaction/main.js'></script>
+    <script src='./fullcalendar/packages/daygrid/main.js'></script>
 
     <!-- Your Calendar Initialization Script -->
     <script>
@@ -181,10 +181,10 @@
         </script>
 
     <!-- Bootstrap and Main Scripts -->
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="./js/jquery-3.3.1.min.js"></script>
+    <script src="./js/popper.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
