--- a/node/views/settingpage/loginpage.html
+++ b/node/views/settingpage/loginpage.html
@@ -58,20 +58,20 @@
             <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample10">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/dailypage">Home</a>
+                        <a class="nav-link active" aria-current="page" href="../index/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/weekpage">Week</a>
+                        <a class="nav-link" href="../weekpage/weekpage.html">Week</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/monthpage">Month</a>
+                        <a class="nav-link" href="../monthpage/index.html">Month</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Menu</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/settingpage">Setting</a></li>
-                            <li><a class="dropdown-item" href="/profilepage">Profile</a></li>
-                            <li><a class="dropdown-item" href="/loginpage">Log in</a></li>
+                            <li><a class="dropdown-item" href="../settingpage/settingpage.html">Setting</a></li>
+                            <li><a class="dropdown-item" href="../settingpage/profilepage.html">Profile</a></li>
+                            <li><a class="dropdown-item" href="../settingpage/loginpage.html">Log in</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -127,20 +127,43 @@
         </main>
 
         <script>
-            document.getElementById('showSignUp').addEventListener('click', function () {
-                var signupForm = document.getElementById('signupForm');
-                signupForm.classList.toggle('d-none');
+          function postData() {
+              // 입력에서 값을 가져와서 JSON 데이터 생성
+              const jsonData = {
+                  name: document.getElementById("nameInput").value,
+                  email: document.getElementById("emailInput").value
+              };
+
+              // 서버 엔드포인트를 '/loginpage'로 변경
+              const serverEndpoint = "http://ec2-18-221-192-14.us-east-2.compute.amazonaws.com:3000/loginpage";
+
+              // JSON 데이터를 서버로 POST
+              fetch(serverEndpoint, {
+                      method: "POST",
+                      headers: {
+                          "Content-Type": "application/json"
+                      },
+                      body: JSON.stringify(jsonData)
+                  })
+                  .then(response => response.json())
+                  .then(data => console.log("Server response:", data))
+                  .catch(error => console.error("Error:", error));
+                }
+          
+          document.getElementById('showSignUp').addEventListener('click', function () {
+            var signupForm = document.getElementById('signupForm');
+            signupForm.classList.toggle('d-none');
             });
 
-            function toggleSignupForm() {
-                var signupForm = document.getElementById("signupForm");
+          function toggleSignupForm() {
+              var signupForm = document.getElementById("signupForm");
 
-                if (signupForm.style.display === "none") {
-                    signupForm.style.display = "block";
-                } else {
-                    signupForm.style.display = "none";
-                }
-            }
+              if (signupForm.style.display === "none") {
+                  signupForm.style.display = "block";
+              }else {
+                  signupForm.style.display = "none";
+              }
+          }
 
             // 회원가입 폼 제출 함수 
             function submitSignupForm() {
