--- a/node/views/settingpage/loginpage.html
+++ b/node/views/settingpage/loginpage.html
@@ -180,7 +180,7 @@
                     email: email,
                     password: password
                 };
-
+                console.log(data);
                 // 예: 데이터를 수집하고 서버에 전송하는 등의 동작이 포함
                 // 서버로 데이터를 전송
                 fetch(server + '/loginpage', {
@@ -195,6 +195,7 @@
                 }).then(function (json) {
                     // 응답 데이터를 처리
                     console.log(json);
+                    console.log("json message!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!");
                 });
             }
         </script>
